# SimRigController

./: .gitignore  LICENSE  Makefile  README.md
ansible/: ansible.cfg  inventory.yml  site.yml
ansible/group_vars/: all.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/python_runtime/defaults/: main.yml
ansible/roles/python_runtime/tasks/: main.yml
ansible/roles/shaker_app/defaults/: main.yml
ansible/roles/shaker_app/handlers/: main.yml
ansible/roles/shaker_app/tasks/: main.yml
ansible/roles/shaker_app/templates/: profiles.json.j2  shaker.service.j2  shaker.toml.j2
apps/shaker/: pyproject.toml
apps/shaker/config/: shaker.toml
apps/shaker/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/shaker/frontend/src/: App.tsx  index.css
apps/shaker/frontend/src/api/: client.ts
apps/shaker/frontend/src/components/: ConfigField.tsx  EffectCard.tsx  Hint.tsx  MuteButton.tsx  ProfileSelector.tsx  StatusBar.tsx  TestButton.tsx
apps/shaker/frontend/src/types/: config.ts
apps/shaker/src/shaker/: __main__.py  config.py  profiles.py  runtime.py
apps/shaker/src/shaker/audio/: bus.py  effects.py  stream.py
apps/shaker/src/shaker/gt7/: __init__.py  client.py  protocol.py
apps/shaker/src/shaker/web/: app.py
apps/shaker/src/shaker/web/static/: index.html
apps/shaker/src/shaker/web/static/assets/: index-DzboPRqx.css  index-FPUXjN7Q.js
apps/shaker/tests/: test_audio.py  test_client.py  test_profiles.py  test_smoke.py
