[project]
name = "shaker"
version = "0.0.1"
description = "Drives a bass shaker amp from Gran Turismo 7 PS5 telemetry."
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchfiles>=0.24",
    "numpy>=2.0",
    "sounddevice>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shaker"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
